--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,16 @@ html {
 	flex-direction: column;
 	align-items: flex-start;
 }
+
 img {
-	display: block; /* Make the image a block-level element */
-	width: 100%; /* Set width to fill the entire viewport */
-	height: auto; /* Maintain aspect ratio */
-	position: fixed; /* Fixed position to stay at the top of the viewport */
-	top: 0; /* Align to the top */
-	left: 0; /* Align to the left */
-	z-index: 1; /* Move the image behind other content */
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); /* Add a shadow effect */
+	display: block;
+	width: 100%;
+	height: auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* Center the input and button */
@@ -26,17 +27,17 @@ img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* transform: translate(-50%, -50%); */
 	width: auto;
 	border-radius: 20px;
-	margin: 80px;
+	margin: 20px; /* Adjusted margin for better spacing */
 	text-align: center;
 	font-size: larger;
 	color: white;
 	border: none;
 	cursor: pointer;
-	z-index: 1; /* Move the image behind other content */
+	z-index: 1;
 }
+
 #fileInput {
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 	background-image: linear-gradient(to bottom right, violet, purple);
@@ -45,11 +46,7 @@ img {
 
 .big-button {
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-	background-image: linear-gradient(
-		to bottom right,
-		#00ff00,
-		#008000
-	); /* Gradient background for button */
+	background-image: linear-gradient(to bottom right, #00ff00, #008000);
 	padding: 40px;
 }
 
@@ -61,5 +58,22 @@ img {
 
 .big-button:active,
 #fileInput:active {
-	transform: translate(-5%) scale(1.25); /* Scale down on click */
+	transform: translate(-5%) scale(1.25);
+}
+
+/* Media query for iPhone */
+@media only screen and (max-width: 414px) {
+	body,
+	html {
+		justify-content: center; /* Center content horizontally */
+		align-items: center; /* Center content vertically */
+	}
+	img {
+		width: 100%; /* Adjust image width */
+		height: auto; /* Maintain aspect ratio */
+	}
+	#fileInput,
+	.big-button {
+		width: 90%; /* Adjust button width */
+	}
 }
